# aamad-bootcamp

./: .env.example  main.py  pyproject.toml
aamad-project/: AGENTS.md  main.py  pyproject.toml
aamad-project/.claude/: CLAUDE.md  settings.json
aamad-project/.claude/agents/: backend-eng.md  frontend-eng.md  integration-eng.md  product-mgr.md  qa-eng.md  system-arch.md
aamad-project/.claude/rules/: aamad-core.md  adapter-crewai.md  adapter-registry.md
aamad-project/project-context/0.idea/: idea.md
aamad-project/project-context/1.define/: MRD.md  mrd.md  prd.md  sad.md
learn-aamad/project-context/1.define/: market-research.md  product-requirements-document.md  sad.md
recruitment_assistant/: .dockerignore  Dockerfile  README.md  pyproject.toml  resume.txt
recruitment_assistant/src/recruitment_assistant/: crew.py  main.py  schemas.py
recruitment_assistant/src/recruitment_assistant/config/: agents.yaml  tasks.yaml
recruitment_assistant/src/recruitment_assistant/data/: __init__.py  demo_corpus.json
recruitment_assistant/src/recruitment_assistant/tools/: __init__.py  _filters.py  _llm.py  demo_corpus_reader.py  job_feed_fetcher.py  llm_structured_coach.py  llm_structured_extract.py  llm_structured_rank.py  remote_ok_fetcher.py  resume_reader.py
