[project]
name = "recruitment_assistant"
version = "0.1.0"
description = "recruitment-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.14.2",
]

[project.scripts]
recruitment_assistant = "recruitment_assistant.main:run"
run_crew = "recruitment_assistant.main:run"
train = "recruitment_assistant.main:train"
replay = "recruitment_assistant.main:replay"
test = "recruitment_assistant.main:test"
run_with_trigger = "recruitment_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
